--- a/backEnd/portfolio/requirements.txt
+++ b/backEnd/portfolio/requirements.txt
@@ -1,9 +1,18 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+dj-database-url==2.2.0
 Django==5.1.1
 django-ninja==1.3.0
+gunicorn==23.0.0
+iniconfig==2.0.0
+packaging==24.1
+pluggy==1.5.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytest==8.3.3
+pytest-django==4.9.0
 python-dotenv==1.0.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
