vercel settings update

--- a/backEnd/portfolio/vercel.json
+++ b/backEnd/portfolio/vercel.json
@@ -4,23 +4,24 @@
       {
         "src": "config/wsgi.py",
         "use": "@vercel/python",
-        "config": {"maxLambdaSize": "15mb", "runtime": "Python3.12"}
+        "config": {"maxLambdaSize": "15mb", "runtime": "Python3.12.3"}
       },
       {
         "src": "build_files.sh",
         "use": "@vercel/static-build",
-        "config": {"distDir": "staticfiles_build"}
+        "config": {"distDir": "staticfiles"}
       }
     ],
     "routes":[
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "config/wsgi.py"
-        }
-    ]
-}
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "config/wsgi.py"
+      }
+    ],
+    "buildCommand": "./build_files.sh"
+  }
   
