--- a/backEnd/portfolio/vercel.json
+++ b/backEnd/portfolio/vercel.json
@@ -11,7 +11,7 @@
         },
         {
             "src": "build.sh",
-            "use": "@vercel/static_build",
+            "use": "@vercel/static-build",
             "config": {
                 "distDir": "staticfiles_build"
             }
