--- a/backEnd/portfolio/requirements.txt
+++ b/backEnd/portfolio/requirements.txt
@@ -13,7 +13,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pytest==8.3.3
 pytest-django==4.9.0
-python-dotenv==1.0.1
+python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
 whitenoise==6.7.0
