--- a/backEnd/portfolio/vercel.json
+++ b/backEnd/portfolio/vercel.json
@@ -13,7 +13,7 @@
             "src": "build.sh",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "staticfiles_build"
+                "distDir": "staticfiles_build/static"
             }
         }
     ],
@@ -24,7 +24,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "congig/wsgi.py"
+            "dest": "config/wsgi.py"
         }
     ]
 }
