static esue dones.

--- a/backEnd/portfolio/vercel.json
+++ b/backEnd/portfolio/vercel.json
@@ -23,6 +23,10 @@
             "dest": "/static/$1"
         },
         {
+            "src": "/static/(.*)",
+            "dest": "/staticfiles_build/static/$1"
+        },        
+        {
             "src": "/(.*)",
             "dest": "config/wsgi.py"
         }
